--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,12 @@ services:
       dockerfile: Dockerfile
       args:
         NODE_VERSION: 20
+        JWTSECRET: ${JWTSECRET}
+        DB_HOST: db
+        DB_PORT: 3306
+        DB_USER: root
+        DB_PASSWORD: root
+        DB_NAME: test_cursor
     ports:
       - "3000:3000"
     env_file:
@@ -23,11 +29,11 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: db-dev-cursor
+    container_name: db-prod-cursor
     environment:
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: test_cursor
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_PASSWORD: root
     ports:
       - "3308:3306"
     volumes:
@@ -37,4 +43,3 @@ services:
 
 volumes:
   db_data:
-
