--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -27,8 +27,8 @@ services:
       DB_ROOT_PASSWORD: root
     volumes:
       - .:/app
-      - node_modules:/app/node_modules
-      - next_cache:/app/.next
+      - node_modules_dev:/app/node_modules
+      - next_cache_dev:/app/.next
     depends_on:
       - db
     restart: unless-stopped
@@ -42,14 +42,14 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_PASSWORD: root
     ports:
-      - "3308:3306"
+      - "3307:3306"
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data_dev:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
 
 volumes:
-  node_modules:
-  next_cache:
-  db_data:
+  node_modules_dev:
+  next_cache_dev:
+  db_data_dev:
 
