add auth_secure_cookie to .env.example

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DB_PASSWORD=root
 DB_NAME=test_cursor
 
 JWTSECRET=asdfa98s7df5a8s7df9as8d7f69sdf9asd877a9s8d7f698gsdfseff
+
+AUTH_SECURE_COOKIE=false
