--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ DB_NAME=test_cursor
 
 JWTSECRET=asdfa98s7df5a8s7df9as8d7f69sdf9asd877a9s8d7f698gsdfseff
 
+NEXT_PUBLIC_APP_URL=
 AUTH_SECURE_COOKIE=false
