--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -45,6 +45,7 @@ services:
       - "3307:3306"
     volumes:
       - db_data_dev:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
 
